syntax = "proto3";
// package common;

message GameData {
  string room_id = 1;
  string rule_id = 2;
  string server_id = 3;
  string game_id = 4;
}

message SysError {
  string id = 1;
  int32 code = 2;
  string detail = 3;
  string status = 4;
};